Resolves: fdo#41556 When fontconfig matches italic font, italicity is ignored